# coreProject

./: CMakeLists.txt  main.cpp  myKEYS.pem
metalcpp/: definition.cpp
src/: CMakeLists.txt  functions_export.cpp  functions_export.h
src/algebra/linear_algebra/: matrix.cpp  matrix.h
src/algorithms/: cacm222.cpp  cacm222.h  toms179.cpp  toms179.h
src/bonds/: bond_annuity.cpp  bond_annuity.h
src/functions/: functions.cpp  functions.h  functions_math.cpp  functions_math.h
src/risk/: risk.cpp  risk.h
src/statistics/: cdflib.cpp  cdflib.hpp  distribution_binomial.cpp  distribution_binomial.h  distribution_gamma.cpp  distribution_gamma.h  distribution_normal.cpp  distribution_normal.h
test/: CMakeLists.txt
test/statistics/: distribution_binomialTest.cpp
